news-text-classifier/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: news
spec:
  selector:
    app: news
  ports:
    - protocol: TCP
      port: 9000
      name: http
      targetPort: 9000
