news-text-classifier/k8s/istio-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: news
spec:
  hosts:
  - "*"
  gateways:
  - seldon-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: news
        port:
          number: 9000
